--- a/reference/ToDo/src/Directory.Build.props
+++ b/reference/ToDo/src/Directory.Build.props
@@ -15,8 +15,9 @@
 
   <!-- See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages version properties. -->
   <PropertyGroup>
-    <UnoExtensionsVersion>4.1.24</UnoExtensionsVersion>
+    <UnoExtensionsVersion>4.1.28</UnoExtensionsVersion>
     <UnoToolkitVersion>6.0.24</UnoToolkitVersion>
     <UnoThemesVersion>5.0.13</UnoThemesVersion>
+    <MicrosoftIdentityClientVersion>4.61.3</MicrosoftIdentityClientVersion>
   </PropertyGroup>
 </Project>
